app/public/css/common/ui.less
html, body {
  height:100%;
}

#container, .content{
  height:auto !important; /* real browsers */
  height:100%; /* IE6: treaded as min-height*/
  min-height:100%; /* real browsers */
}

.content-wrapper {
  position:absolute;
  left:@contentWrapperLeft;
  top:80px;
  margin-left:10px;
}

.item {
    padding:5px 5px 5px 10px;
    margin-bottom:10px;
    margin-left:0px!important;
    .border-radius(4px);
    .box-shadow(inset 0 0 1px 1px @itemBoxShadowColor);    
    border-bottom:1px solid #ededed;
    #gradient > .vertical(@itemBeginColor, @itemEndColor);
}

.item h4 {
  margin-bottom:5px!important;
  color:#555;
}

.item.alert-success {
  background-color:#DFF0D8;
  background-image:none;
  background-repeat:no-repeat;
}

.item-header {
    background:rgba(0, 0, 0, 0.05); 
    font-weight:bold; font-size:1.1em;
    border-bottom:1px solid #ddd;
    padding-bottom:8px;
    margin-bottom:0px;
}

.item-nav {
    text-align: right;
}
    .item-nav a {
        margin-right:10px;
    }
    
#loading-global {
    background: @globalLoading;
    display: none;
    font-size: 12px;
    font-weight: bold;
    left: 0;
    padding: 10px 30px 10px 30px;
    position: fixed;
    top: 0;
    left:45%;
    z-index: 9999;
    border-bottom-left-radius:5px;
    border-bottom-right-radius:5px;
}

i {
    //margin-right:5px;
}

.item i {
    margin-right:5px;
}

.item a.btn>i {
  margin-right:0px;
}

.nav .cug {
  margin-top:3px;
  margin-right:5px;
}

table td  {
    vertical-align:middle;
}

.left {
  text-align:left;
}
.center {
    text-align:center;
}

.right {
    text-align:right;
}

.btn-large {
    .border-radius(6px);
    font-size: 20px;
    margin-right: 5px;
    padding: 14px 24px;
}

.selected {
  #gradient > .vertical(@selectedBackgroundStart, @selectedBackgroundEnd);
}

.well {
  padding-left:10px;
  padding-right:10px;
}

.panel-close {
  margin:-10px 0px 20px 0;
}

.sidebar-navigation-wrapper-right input.span4 {
  width:290px;
}

.sidebar-navigation-wrapper-right i {
  margin-right:0px;
}

.inline-block {
  display:inline-block;
}

h4 {
  padding:5px 0;
}

hr {
  margin:8px 0 12px 0;
  clear:both;
}

form .add-on {
  margin-bottom:9px;
  margin-left:-5px!important;
}

.contact-type-items .item {
  cursor:move;
}

.contact-type-items .alert { 
  height: 2.5em; line-height: 2.5em; margin-bottom:10px; 
}

.contact-items h6 {
  margin-bottom:10px!important;
  color:#555;
  text-transform:none;
}

.contact-items h6 span {
  display:inline-block;
  width:200px;
  text-transform:uppercase;
  color:#999;
}

.upper-gray {
  text-transform:uppercase;
  color:#999;  
  font-size:0.8em;
}

.help-inline {
  color:#999;
  font-size:11px;
}

.help-inline.span4 {
  margin-left:0;
}

#delete-confirmation, #overwrite-warning {
  min-width:560px;
  width:auto;
}

.tooltip {
  .opacity(0);
  &.in     { .opacity(90); }
  &.top .tooltip-arrow    { #popoverArrow > .top(5px, @leftNavLinkActiveStart); }
  &.left .tooltip-arrow   { #popoverArrow > .left(5px, @leftNavLinkActiveStart); }
  &.bottom .tooltip-arrow { #popoverArrow > .bottom(5px, @leftNavLinkActiveStart); }
  &.right .tooltip-arrow  { #popoverArrow > .right(5px, @leftNavLinkActiveStart); }
}

.tooltip-inner {
  background-color:@leftNavLinkActiveStart;
}

.progress {
  border:1px solid #ccc;
}

.controls .btn {
  margin-bottom:9px;
}

.accordion-group {
  margin-bottom: 10px;
} 

.accordion-group .thumbnails, .thumbnails.all-games {
  margin-left: -10px;
}

.accordion-group .thumbnails li {
  min-height:165px;
  background:#eee;
}

.accordion-group .thumbnails > li, .thumbnails.all-games > li {
  margin: 0 0 9px 10px;
}

.accordion-group .thumbnails > li.span2, .thumbnails.all-games > li.span2, .dnd-helper > li.span2 {
  width: 120px;
}

.accordion-group .thumbnail .caption, .dnd-helper .caption {
  padding: 0 3px;
}

.accordion-group .thumbnails .item {
  margin-bottom:0px;
}

.accordion-heading {
  #gradient > .vertical(@itemBeginColor, @itemEndColor);
  .icon-resize-vertical {
    left: -7px;
    position: relative;
    top: -2px;
  }
}

.thumbnails .item {
  cursor:move;
}

.label {
  position:relative;
  top:-2px;
}

.tipp-text {
  text-transform:lowercase;
  color:#C09853;
  font-size:12px;
}

.dnd-li-active {
  background:@globalLoading!important;
  width:120px;
  height:100px;
}

